# matlab-cmake-hello-world

./: CMakeLists.txt  README.md
CMake/: MatlabMakeMacros.cmake  ProjectCMakeFunctions.cmake
tests/: CMakeLists.txt  hello.c  hellocpp2.cpp  hellocppTT.cpp  hellocppTT.m
utilsMEX/: mex_link.sh  mex_stub.c  mex_stub.cpp
