project(MATLAB_CMAKE)

cmake_minimum_required(VERSION 2.6)

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/bin CACHE INTERNAL 
  "Executable output directory")
SET (CMAKE_LIBRARY_OUTPUT_DIRECTORY
  ${PROJECT_BINARY_DIR}/bin CACHE INTERNAL
  "Library output directory")

SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR} ${CMAKE_SOURCE_DIR}/CMake)
INCLUDE(ProjectCMakeFunctions)
INCLUDE(MatlabMakeMacros)

OPTION(BUILD_SHARED_LIBS "Build shared libs" ON)

find_package(Matlab REQUIRED)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/tests ${MATLAB_INCLUDE_DIR})
add_subdirectory(tests)


install(DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY} DESTINATION ${CMAKE_INSTALL_PREFIX})

